--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>{{ site.data.main_info.name }}</title>
-  <meta name="description" content="Homepage of Jaehyun Nam">
-  <meta name="author" content="Jaehyun Nam">
+  <meta name="description" content="Homepage of Chaewon Moon">
+  <meta name="author" content="Chaewon Moon">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -77,13 +77,13 @@
                 <i class="fa ai ai-cv-square" aria-hidden="true"></i>
               </span>
 
-              <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
+              <!-- <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
                 <i class="fa fa-github-square" aria-hidden="true"></i>
               </span>
 
               <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
                 <i class="fa fa-twitter-square" aria-hidden="true"></i>
-              </span>    
+              </span>     -->
 
               <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
                 <i class="ai fa ai-google-scholar-square" aria-hidden="true"></i>
