--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,10 @@
     <section class="header">
       <div class="row">
         <div class="three columns">
-          <a href="{{ site.baseurl }}/"><img class="u-max-full-width" style="border-radius: 1rem;" src='{{ site.baseurl }}{{ site.data.main_info.profile_pic }}'></a>
+          <a href="{{ site.baseurl }}/">
+            <img class="u-max-full-width profile-photo"
+                 src='{{ site.baseurl }}{{ site.data.main_info.profile_pic }}'>
+          </a>
         </div>
         <div class="nine columns main-description">
             <h1>{{ site.data.main_info.name }}</h1>
@@ -129,12 +132,12 @@
           <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
             <i class="ai ai-google-scholar-square" aria-hidden="true"></i>
           </span>
-          <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
+          <!-- <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
             <i class="fa fa-twitter-square" aria-hidden="true"></i>
           </span>
           <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
             <i class="fa fa-github-square" aria-hidden="true"></i>
-          </span>
+          </span> -->
         </div>
       </div>
     </div>
