--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,9 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href={{ "/libs/icon.png" | prepend: site.baseurl }}>
-  <link rel="shortcut icon" type="image/png" href={{ "/libs/icon.png" | prepend: site.baseurl }}>
+  <link rel="icon" type="image/png" href="{{ '/libs/icon.png' | prepend: site.baseurl }}">
+  <link rel="shortcut icon" type="image/png" href="{{ '/libs/icon.png' | prepend: site.baseurl }}">
+
 
 </head>
 <body>
@@ -76,7 +77,7 @@
             <p>{{ site.data.main_info.office }}</p>
             <p>{{ site.data.main_info.email }}</p>
             <p>
-              <span class="round-icon" onclick="window.open('{{ site.data.main_info.cv }}')" style="cursor: pointer">
+              <span class="social-round" onclick="window.open('{{ site.data.main_info.cv }}')" style="cursor: pointer">
                 <i class="fa ai ai-cv-square" aria-hidden="true"></i>
               </span>
 
@@ -88,7 +89,7 @@
                 <i class="fa fa-twitter-square" aria-hidden="true"></i>
               </span>     -->
 
-              <span class="round-icon" onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
+              <span class="social-round" onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
                 <i class="ai fa ai-google-scholar-square" aria-hidden="true"></i>
               </span>
 
