Make icon buttons fully circular

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
             <p>{{ site.data.main_info.email }}</p>
             <p>
               <span class="social-round" onclick="window.open('{{ site.data.main_info.cv }}')" style="cursor: pointer">
-                <i class="fa ai ai-cv-square" aria-hidden="true"></i>
+                <i class="ai ai-cv"></i>
               </span>
 
               <!-- <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
@@ -90,7 +90,7 @@
               </span>     -->
 
               <span class="social-round" onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
-                <i class="ai fa ai-google-scholar-square" aria-hidden="true"></i>
+                <i class="ai ai-google-scholar"></i>
               </span>
 
               <!-- <span onclick="window.open('{{ site.data.main_info.semantic_scholar }}')" style="cursor: pointer">
