--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,8 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="{{ '/libs/icon.png' | prepend: site.baseurl }}">
-  <link rel="shortcut icon" type="image/png" href="{{ '/libs/icon.png' | prepend: site.baseurl }}">
+  <link rel="icon" type="image/png" href="{{ '/libs/favicon.ico' | prepend: site.baseurl }}">
+  <link rel="shortcut icon" type="image/png" href="{{ '/libs/favicon.ico' | prepend: site.baseurl }}">
 
 
 </head>
@@ -124,15 +124,15 @@
     <div class="footer">
       <div class="row">
         <div class="four columns">
-          {{ site.data.main_info.name }}
+          <!-- {{ site.data.main_info.name }} -->
         </div>
         <div class="four columns">
           based on <a href="https://web.media.mit.edu/~msaveski/" style="font-weight: lighter">Martin Saveski</a>'s template
         </div>
         <div class="four columns">
-          <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
+          <!-- <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
             <i class="ai ai-google-scholar-square" aria-hidden="true"></i>
-          </span>
+          </span> -->
           <!-- <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
             <i class="fa fa-twitter-square" aria-hidden="true"></i>
           </span>
