--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -246,3 +246,23 @@ h1, h2, h3 {
   font-weight: 600 !important;
 }
 
+/* 아이콘을 이미지로 쓰기 */
+.social-icon img {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+/* 폰트 강제로 두껍게 */
+* {
+  font-weight: 500 !important;
+}
+
+h1, h2, h3 {
+  font-weight: 700 !important;
+}
+
+.navbar a {
+  font-weight: 700 !important;
+}
