--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -246,13 +246,15 @@ h1, h2, h3 {
   font-weight: 600 !important;
 }
 
-/* 아이콘을 이미지로 쓰기 */
+/* 상단 프로필 옆 CV / Scholar 아이콘 크기 고정 */
 .social-icon img {
-  width: 36px;
-  height: 36px;
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
-  margin-right: 8px;
+  display: inline-block;
+  vertical-align: middle;
 }
+
 
 /* 폰트 강제로 두껍게 */
 * {
@@ -265,4 +267,25 @@ h1, h2, h3 {
 
 .navbar a {
   font-weight: 700 !important;
+}
+
+/* ===== 강제로 모든 텍스트 두껍게 만들기 ===== */
+html body,
+html p,
+html span,
+html div,
+html li,
+html a {
+  font-weight: 500 !important;
+}
+
+/* 본문 단락 텍스트 더 또렷하게 */
+p {
+  font-weight: 500 !important;
+}
+
+/* 메뉴 텍스트 */
+#nav a,
+.nav a {
+  font-weight: 600 !important;
 }
