--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,10 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/x-icon" href="/libs/favicon.ico">
-  <link rel="shortcut icon" type="image/x-icon" href="/libs/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/libs/favicon.ico" />
+  <link rel="shortcut icon" href="/libs/favicon.ico" />
+  <link rel="apple-touch-icon" href="/libs/favicon.ico" />
+
 
 
 
