Align CV and scholar icon with flexbox and edit font

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,8 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700&display=swap" rel="stylesheet">
+
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -91,6 +92,7 @@
                   <img src="{{ '/libs/scholar.png' | prepend: site.baseurl }}" alt="Google Scholar">
                 </span>
               </div>
+              
               
 
               <!-- <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
