--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -210,36 +210,6 @@ h4 {
   color: #000000 !important;
 }
 
-/* 아이콘을 "버튼"이 아니라 그냥 깔끔한 아이콘처럼 */
-/* .social-round {
-  display: inline-flex !important;
-  align-items: center;
-  justify-content: center;
-
-  width: auto !important;
-  height: auto !important;
-  border-radius: 0 !important;
-
-  background-color: transparent !important;  /* 핵심 */
-  /* margin-right: 10px;
-}
-
-.social-round i {
-  font-size: 28px !important;    /* 아이콘 크게 */
-  /* color: #444 !important;        /* 색 (원하면 변경 가능) */
-/* } */
-
-
-
-/* 상단 프로필 옆 CV / Scholar 아이콘 크기 고정 */
-/* .social-icon img { */
-  /* width: 32px; */
-  /* height: 32px; */
-  /* border-radius: 50%; */
-  /* display: inline-block; */
-  /* vertical-align: middle; */ */
-/* } */
-
 
 /* CV + Scholar 한 줄 정렬 */
 .profile-links {
@@ -282,7 +252,8 @@ h4 {
   display: block;
 }
 
-.name {
-  font-family: 'Playfair Display', serif;
-  font-weight: 700;
+h1, h2, h3, h4 {
+  font-family: 'Playfair Display', serif !important;
+  font-weight: 700 !important;
 }
+
