--- a/libs/external/skeleton/skeleton.css
+++ b/libs/external/skeleton/skeleton.css
@@ -136,8 +136,7 @@ b, strong {
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
-  /* font-family: 'Space Grotesk', sans-serif; */
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Space Grotesk', sans-serif;
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 600; 
