--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -254,18 +254,12 @@ h4 {
 
 
 /* ===== 기본 본문 폰트: Inter (깔끔한 산세리프) ===== */
-body {
+/* body {
   font-family: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif !important;
   font-weight: 400;
   color: #222;
-}
-
-/* ===== 제목 폰트: Source Serif Pro (학술 느낌 세리프) ===== */
-/* h1, h2, h3, h4 {
-  font-family: 'Space Grotesk', sans-serif !important;
-  font-weight: 600;
-  letter-spacing: -0.02em;
 } */
+
 
 /* 조금 더 강조하고 싶으면 h1만 더 굵게 */
 h1 {
