Edit paper buttons

--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -280,3 +280,7 @@ b, strong {
 .timeline span {
   font-family: "Ubuntu", sans-serif !important;
 }
+
+.paper-buttons .button {
+  font-family: 'Inter', sans-serif !important;
+}
