--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -237,6 +237,7 @@ h4 {
   display: flex;
   align-items: center;   /* 핵심 */
   gap: 12px;             /* 아이콘 사이 간격 */
+  color: #696FAD
 }
 
 .icon-btn {
@@ -244,6 +245,7 @@ h4 {
   font-weight: 700;
   cursor: pointer;
   line-height: 1;
+  color:#696FAD
 }
 
 .scholar-icon {
