style cv and scholar icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
                 </span>
               
                 <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" class="icon-btn">
-                  <img src="{{ '/libs/scholar.png' | prepend: site.baseurl }}" class="scholar-icon">
+                  <img src="{{ '/libs/scholar.svg' | prepend: site.baseurl }}" class="scholar-icon">
                 </span>
               </div>
               
