--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,6 +135,10 @@
                 <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" class="icon-btn">
                   <img src="{{ '/libs/scholar.svg' | prepend: site.baseurl }}" class="scholar-icon">
                 </span>
+
+                <span onclick="window.open('{{ site.data.main_info.linkedin }}')" class="icon-btn">
+                  <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                </span>
               </div>
               
               
@@ -152,9 +156,7 @@
                 <i class="ai fa ai-semantic-scholar-square" aria-hidden="true"></i>
               </span> -->
 
-              <!-- <span onclick="window.open('{{ site.data.main_info.linkedin }}')" style="cursor: pointer">
-                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-              </span> -->
+              
             </p>
         </div>
       </div>
