--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -287,3 +287,11 @@ b, strong {
 .main-info {
   margin-left: 100px;  /* 숫자 키우면 더 오른쪽 */
 }
+
+
+.icon-btn .fa-linkedin-square {
+  font-size: 22px;    /* 크기 조절 (원하는 크기) */
+  color: #696FAD;     /* LinkedIn 공식 파란색 */
+  vertical-align: relative; /* 옆 아이콘과 높이 맞추기 */
+  transform: translateY(-1px) translateX(5px);
+}
